force-app/main/default/objects/Contacts_on_Pre_Call_Planner__c/Contacts_on_Pre_Call_Planner__c.object-meta.xml
<CustomObject>
    <description>Contacts on Pre Call planner Junction Object  is to display all the contacts related to Accounts on  Pre Call planner Object.</description>
    <label>Contacts on Pre Call Planner</label>
    <nameField>
        <displayFormat>CPCP-{0000}</displayFormat>
        <label>Contacts on PreCall Planner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts on Pre Call Planner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>