force-app/main/default/objects/Contacts_on_Pre_Call_Planner__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts on Pre Call Planner</relationshipLabel>
    <relationshipName>Contacts_on_Pre_Call_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>