force-app/main/default/objects/Contacts_on_Pre_Call_Planner__c/fields/Pre_Call_Planner__c.field-meta.xml
<CustomField>
    <fullName>Pre_Call_Planner__c</fullName>
    <label>Pre Call Planner</label>
    <referenceTo>Pre_Call_Planner__c</referenceTo>
    <relationshipLabel>Contacts on Pre Call Planner</relationshipLabel>
    <relationshipName>Contacts_on_Pre_Call_Planner</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>